
AM_CFLAGS=@SDLMIXER_CFLAGS@

noinst_LIBRARIES=libopl.a

libopl_a_SOURCES =                                \
                            opl_internal.h        \
        opl.c               opl.h                 \
        opl_linux.c                               \
        fmopl.c             fmopl.h

