
AM_CFLAGS=@SDLMIXER_CFLAGS@

SUBDIRS = . examples

noinst_LIBRARIES=libopl.a

libopl_a_SOURCES =                                \
                            opl_internal.h        \
        opl.c               opl.h                 \
        opl_linux.c                               \
        opl_sdl.c                                 \
        fmopl.c             fmopl.h

