
OSX_FILES=                                                              \
osx/app-skeleton/Contents/PkgInfo                                       \
osx/app-skeleton/Contents/Resources/128x128.png                         \
osx/app-skeleton/Contents/Resources/app.icns                            \
osx/app-skeleton/Contents/Resources/wadfile.icns                        \
osx/app-skeleton/Contents/Resources/launcher.nib/classes.nib            \
osx/app-skeleton/Contents/Resources/launcher.nib/info.nib               \
osx/app-skeleton/Contents/Resources/launcher.nib/keyedobjects.nib       \
osx/GNUmakefile                                                         \
osx/Info.plist.in                                                       \
osx/cp-with-libs                                                        \
osx/main.m                                                              \
osx/AppController.m     osx/AppController.h                             \
osx/Execute.m           osx/Execute.h                                   \
osx/IWADController.m    osx/IWADController.h                            \
osx/IWADLocation.m      osx/IWADLocation.h                              \
osx/LauncherManager.m   osx/LauncherManager.h

WINCE_FILES=                                                            \
wince/GNUmakefile                                                       \
wince/wince-cab.cfg                                                     \
wince/wince-cabgen

WIN32_FILES=                                                            \
win32/GNUmakefile                                                       \
win32/README

EXTRA_DIST=$(OSX_FILES) $(WINCE_FILES) $(WIN32_FILES)

